# PythonFoundations

basics/feb25/: basic_sequences.ipynb  conditionals.ipynb  config.json  configuration.ipynb  csv_write.csv  dictionary_comprehensions.ipynb  euler1.py  even_numbers.txt  exception_handling.py  files.ipynb  functions.ipynb  hacker_rank.ipynb  loops.ipynb  mapping_other.ipynb  methods.ipynb  movies.json  movies.yaml  numeric.ipynb  regularexpressions.ipynb  sequences.ipynb  standardlibrary.ipynb  string.ipynb  test.csv  test.sh  test_program.py  wellknownformats.ipynb
basics/feb25/files/inventory/: inventory  inventory.csv  main.py
basics/feb25/modules/sample1/: main.py
basics/feb25/oop/composition/: usage.ipynb
basics/feb25/oop/inheritence/: test.py
basics/feb25/oop/inventory/: order.py  (+3 more)
basics/sep25/: conditionsnloops.ipynb  datatypes.ipynb  datetimes.ipynb  files.ipynb  functions.ipynb  lambda_others.ipynb  lists.ipynb  numeric-types.ipynb  oops.ipynb  operators.ipynb  standardlib.ipynb
basics/sep25/projects/lms/: pyproject.toml
basics/sep25/projects/user_details/: .env  concurrency.ipynb  demonstration.db  demonstration.ipynb  institute.ipynb  inventory.db  inventory.ipynb  pyproject.toml
fastapi/Oct25/bookmyshow-replica/services/moviesinfo/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi/Oct25/bookmyshow-replica/services/moviesinfo/src/moviesinfo/: db.py  main.py  models.py
fastapi/Oct25/fastapi-books-uv/: .dockerignore  Dockerfile  docker-compose.yaml  pyproject.toml
fastapi/Oct25/hello_library/: main.py  models.py  pyproject.toml
fastapi/Oct25/movies_svc/: docker-compose.yml  pyproject.toml
(+41 files in other folders)
