[project]
name = "lms"
version = "1.0.0"
description = "library management system"
readme = "README.md"
authors = [
    { name = "shaikkhajaibrahim", email = "shaikkhajaibrahim@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
lms = "lms:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
